# re-formality

./: .gitignore  .travis.yml  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  bsconfig.json  devbox.json  dune-project  esy.json  linux.patch  package.json  re-formality-ppx.opam  release.sh  shell.nix  webpack.config.js  windows.patch
.atom/: ide-reason.json
docs/: 01-GettingStarted.md  01-Installation.md  02-ValidationStrategies.md  03-IO.md  04-BasicUsage.md  05-AsyncValidation.md  06-Collections.md  07-DependentFields.md  08-FormSubmission.md  08-Metadata.md  08-RenderingUI.md  09-FormSubmission.md  09-I18n.md  10-Caveats.md  10-I18n.md  11-API.md  11-Caveats.md  12-API.md  README.md
esy.lock/: index.json
examples/: Api.re  App.re  FormsWithFieldId.re  LoginForm.re  LoginFormWithRememberMeCheckbox.re  SignupForm.re  bsconfig.json  index.css  index.html  index.re  package.json  rescript.json
lib/: bsconfig.json  dune-workspace  esy.json  package.json  rescript.json
re-formality/: dune-project  package.json
re-formality-examples/: bsconfig.json  package.json
scripts/: build-linux-arm64.sh  build-macos-arm64.sh  release.sh  user-data.linux-arm64.sh
specs/: bsconfig.json  cypress.json  package.json  rescript.json
src/: Formality.re  Formality.rei  FormalityCompat.re  FormalityCompat.rei  FormalityCompat__Form.re  FormalityCompat__FormAsyncOnBlur.re  FormalityCompat__FormAsyncOnChange.re  Formality__Core.re  Formality__Form.re  Formality__FormAsyncOnBlur.re  Formality__FormAsyncOnBlurWithId.re  Formality__FormAsyncOnChange.re  Formality__FormStatus.re  (+8 more)
(+299 files in other folders)
